# Linear-Workflow

./: .gitignore  CMakeLists.txt  README.md  main.cpp  worker.h  workers.cpp  workers.h  workflow.cpp  workflow.h
parser/: lexer.cpp  lexer.h  lexer.l  make-flex-bison.sh  parser.cpp  parser.hpp  parser.y  parser_types.h  stack.hh  workflow_lexer.c  workflow_lexer.l  workflow_parser.cpp  workflow_parser.h  workflow_parser.y  workflow_yacc.c  workflow_yacc.h  yacc_parser.h
tests/: test_parser.cpp  test_workers.cpp
